2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valasemanticanalyzer.vala,
	  gobject/valacodegeneratorassignment.vala: deny access to instance
	  members from static methods, improve error reporting

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: fix internal warnings on syntax errors,
	  fixes bug 471226

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vapi/gnome-vfs-2.0.vala,
	  vapi/packages/gnome-vfs-2.0/gnome-vfs-2.0-custom.vala: add missing
	  init/shutdown methods

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: fix warnings on invalid code

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusbindingprovider.vala: fix warnings on invalid code

2007-08-28  Jürg Billeter  <j@bitron.ch>

	* vala/valamethod.vala: ensure that the error domains match when
	  comparing two methods for equality, fixes bug 465123

2007-08-28  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodeswitchstatement.vala,
	  gobject/valacodegeneratorclass.vala: generate warning about invalid
	  property ids, fixes bug 463668

2007-08-28  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valacodegenerator.vala: avoid crash on missing copy
	function, fixes bug 471063.

2007-08-28  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* doc/Makefile.am, doc/gidlgen.1, doc/vapigen.1:
	add manual pages for gidlgen and vapigen, written by Kumar Appaiah.
	
2007-08-28  Jürg Billeter  <j@bitron.ch>

	* MAINTAINERS: update format as requested on desktop-devel

2007-08-28  Jürg Billeter  <j@bitron.ch>

	* vala/valafield.vala, vala/valainterfacewriter.vala: support custom
	  field cname in generated VAPI file

	* vapigen/valagidlparser.vala: add mode_t support

	* vapi/glib-2.0.vala, vapi/packages/gtk+-2.0/gtk+-2.0-custom.vala: add
	  some required stubs

	* vapi/gconf-2.0.vala, vapi/packages/gconf-2.0/: add GConf bindings

	* vapi/gnome-vfs-2.0.vala, vapi/packages/gnome-vfs-2.0/: add GnomeVFS
	  bindings
