@@ -1,5 +1,10 @@
 2007-08-29  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valasemanticanalyzer.vala: improve error reporting in invocation
+	  expressions
+
+2007-08-29  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valaclass.vala, vala/valasemanticanalyzer.vala,
 	  gobject/valacodegeneratorassignment.vala: deny access to instance
 	  members from static methods, improve error reporting
